# rss-reader

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json  walkthrough.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 154075cd3c1a_add_content_markdown_to_articles.py  1c3cc7f7d174_rename_use_separate_models_drop_legacy_.py  55f0f2e37b8a_add_feed_folders.py  8c6f3c9b8f70_normalize_category_slugs_and_dedupe.py  bd9b8b970fb9_add_categorization_state.py  dff7a4c52b3c_llm_providers_task_routes.py  f0eb5e5b8e8c_merge_folders_and_rename_models.py
backend/src/backend/: cli.py  config.py  database.py  deps.py  encryption.py  feeds.py  main.py  markdown.py  models.py  ollama_client.py  ollama_service.py  prompts.py  scheduler.py  schemas.py  scoring.py  scoring_queue.py
backend/tests/: conftest.py  test_api.py  test_article_display_state.py  test_auto_group.py  test_batch_models.py  test_batch_prompts.py  test_batch_size.py  test_categories_batch_move.py  test_derive_display_state.py  test_encryption.py  test_feed_folders_api.py  test_fetch_feed.py  test_google_provider.py  test_llm_validation.py  test_markdown.py  test_migrations.py  test_ollama_config_router.py  test_prompt_content.py  test_provider_two_phase.py  test_router_smoke.py  test_save_articles.py  test_scoring.py  test_scoring_activity.py  test_scoring_cancellation.py  test_scoring_queue_batch.py  test_task_route_readiness.py
spec/: prd.md  (+2 more)
(+575 files in other folders)
